--- a/tugas-3/styles.css
+++ b/tugas-3/styles.css
@@ -3,3 +3,15 @@ span{
     font-size: xx-large;
     font-family: Verdana;
 }
+.container {
+    width: 700px;
+}
+
+img {
+    float: left;
+    margin: 10px;
+}
+
+.clear {
+    clear: left;
+}
