--- a/DBS_dicoding/styles/styles.css
+++ b/DBS_dicoding/styles/styles.css
@@ -1,10 +1,3 @@
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    padding: 20px;
-    margin-top: 20px;
-}
-
 .jumbotron {
     font-size: 20px;
     padding: 60px;
@@ -31,15 +24,32 @@ nav li {
 
 main {
     padding: 20px;
+    overflow: auto;
 }
 
+#content {
+    float: left;
+    width: 75%;
+}
+
+aside {
+    float: right;
+    width: 25%;
+    padding-left: 20px;
+}
+
+* {
+    box-sizing: border-box;
+}
 body {
+    
     font-family: 'Quicksand', sans-serif;
     margin: 0;
     padding: 0;
 }
 
 h2, h3 {
+
     color: #00a2c6;
 }
 
@@ -55,22 +65,29 @@ nav a:hover {
     color: white;
 }
 
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    padding: 20px;
+    margin-top: 20px;
+}
+
 p {
     color: rgb(0, 0, 0);
+}
+
+.featured-image {
+    width: 100%;
+    max-height: 200px;
+    object-fit: cover;
+    object-position: center;
 }
 
 .profile header {
     text-align: center;
 }
 
-.featured-image {
-    width: 100%;
-    max-height: 300px;
-    object-fit: cover;
-    object-position: center;
-}
-
-.profile image {
+.profile img {
     width: 200px;
 }
 
