--- a/DBS_dicoding/styles/styles.css
+++ b/DBS_dicoding/styles/styles.css
@@ -10,10 +10,37 @@ h1 {
     color: black;
 }
 
+h2,
+h3 {
+    color: #00a2c6;
+}
+
+footer {
+    padding: 20px;
+    color: white;
+    background-color: #00a2c6;
+    text-align: center;
+    font-weight: bold;
+}
+
+nav a {
+    font-size: 18px;
+    font-weight: 400;
+    text-decoration: none;
+}
+
+nav a:hover {
+    font-weight: bold;
+}
+
+.profile header {
+    text-align: center;
+}
+
 nav {
     background-color: #01abd1;
     padding: 5px;
-    
+
 }
 
 nav li {
@@ -27,49 +54,11 @@ main {
     overflow: auto;
 }
 
-#content {
-    float: left;
-    width: 75%;
-}
-
-aside {
-    float: right;
-    width: 25%;
-    padding-left: 20px;
-}
-
-* {
-    box-sizing: border-box;
-}
 body {
     
     font-family: 'Quicksand', sans-serif;
     margin: 0;
     padding: 0;
-}
-
-h2, h3 {
-
-    color: #00a2c6;
-}
-
-nav a {
-    font-size: 18px;
-    font-weight: 400;
-    text-decoration: none;
-    color: black;
-}
-
-nav a:hover {
-    font-weight: bold;
-    color: white;
-}
-
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    padding: 20px;
-    margin-top: 20px;
 }
 
 p {
@@ -83,18 +72,15 @@ p {
     object-position: center;
 }
 
-.profile header {
-    text-align: center;
-}
-
-.profile img {
+.profile image {
     width: 200px;
+    
 }
 
-footer {
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
     padding: 20px;
-    color: rgb(0, 0, 0);
-    background-color: #00a2c6;
-    text-align: center;
-    font-weight: bold;
+    margin-top: 20px;
 }
+
