--- a/DBS_dicoding/styles/styles.css
+++ b/DBS_dicoding/styles/styles.css
@@ -1,13 +1,12 @@
-.jumbotron {
-    font-size: 20px;
-    padding: 60px;
-    background-color: #00c8eb;
-    text-align: center;
-    color: white;
+* {
+    box-sizing: border-box;
 }
 
-h1 {
-    color: black;
+body {
+    font-family: 'Quicksand', sans-serif;
+
+    margin: 0;
+    padding: 0;
 }
 
 h2,
@@ -17,16 +16,19 @@ h3 {
 
 footer {
     padding: 20px;
-    color: white;
+    color: black;
     background-color: #00a2c6;
+
     text-align: center;
     font-weight: bold;
 }
 
 nav a {
     font-size: 18px;
+
     font-weight: 400;
     text-decoration: none;
+    color: black;
 }
 
 nav a:hover {
@@ -37,10 +39,32 @@ nav a:hover {
     text-align: center;
 }
 
-nav {
-    background-color: #01abd1;
-    padding: 5px;
+.featured-image {
+    width: 100%;
+    max-height: 300px;
 
+    object-fit: cover;
+    object-position: center;
+}
+
+.profile img {
+    width: 200px;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+
+    padding: 20px;
+    margin-top: 20px;
+}
+
+.jumbotron {
+    font-size: 20px;
+    padding: 60px;
+    background-color: #00c8eb;
+    text-align: center;
+    color: black;
 }
 
 nav li {
@@ -49,38 +73,43 @@ nav li {
     margin-right: 20px;
 }
 
+nav {
+    background-color: #00a2c6;
+    padding: 5px;
+}
+
 main {
     padding: 20px;
     overflow: auto;
 }
 
-body {
-    
-    font-family: 'Quicksand', sans-serif;
-    margin: 0;
-    padding: 0;
+#content {
+    float: left;
+    width: 75%;
 }
 
-p {
-    color: rgb(0, 0, 0);
+aside {
+    float: right;
+    width: 25%;
+    padding-left: 20px;
 }
 
-.featured-image {
-    width: 100%;
-    max-height: 200px;
-    object-fit: cover;
-    object-position: center;
+@media screen and (min-width: 400px) {
+    h1 {
+        color: red;
+    }
+
+    h2 {
+        color: green;
+    }
 }
 
-.profile image {
-    width: 200px;
-    
-}
+/* CSS rule dalam block @media di bawah akan diterapkan jika ukuran viewport di atas 992px */
+@media screen and (min-width: 600px) {
+    main {
+        flex-direction: row;
+    }
 
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    padding: 20px;
-    margin-top: 20px;
-}
-
+    #mainContent {
+        flex-basis: 70%;
+    }
