--- a/DBS_dicoding/styles/styles.css
+++ b/DBS_dicoding/styles/styles.css
@@ -1,62 +1,56 @@
 * {
-    box-sizing: border-box;
+    box-sizing: border-box
 }
 
 body {
     font-family: 'Quicksand', sans-serif;
-
     margin: 0;
-    padding: 0;
+    padding: 0
 }
 
-h2,
-h3 {
-    color: #00a2c6;
+h2, h3 {
+    color: #00a2c6
 }
 
 footer {
     padding: 20px;
-    color: black;
+    color: #000;
     background-color: #00a2c6;
-
     text-align: center;
-    font-weight: bold;
+    font-weight: 700
 }
 
 nav a {
     font-size: 18px;
-
     font-weight: 400;
     text-decoration: none;
-    color: black;
+    color: #000
 }
 
 nav a:hover {
-    font-weight: bold;
+    font-weight: 700
 }
 
 .profile header {
-    text-align: center;
+    text-align: center
 }
 
 .featured-image {
     width: 100%;
     max-height: 300px;
-
     object-fit: cover;
-    object-position: center;
+    object-position: center
 }
 
 .profile img {
-    width: 200px;
+    width: 200px
 }
 
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .2);
     border-radius: 5px;
-
     padding: 20px;
-    margin-top: 20px;
+    margin-top: 20px
 }
 
 .jumbotron {
@@ -64,44 +58,47 @@ nav a:hover {
     padding: 60px;
     background-color: #00c8eb;
     text-align: center;
-    color: black;
+    color: #000
 }
 
 nav li {
     display: inline;
     list-style-type: none;
-    margin-right: 20px;
+    margin-right: 20px
 }
 
 nav {
     background-color: #00a2c6;
     padding: 5px;
     position: sticky;
-    top: 0;
+    top: 0
 }
 
 main {
     padding: 20px;
-    overflow: auto;
+    overflow: auto
 }
 
 #content {
     float: left;
-    width: 75%;
+    width: 75%
 }
 
 aside {
     float: right;
     width: 25%;
-    padding-left: 20px;
+    padding-left: 20px
 }
 
+header {
+    display: inline
+}
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width:1000px) {
 
     #content,
     aside {
         width: 100%;
-        padding: 0;
+        padding: 0
     }
 }
