--- a/DBS_dicoding/styles/styles.css
+++ b/DBS_dicoding/styles/styles.css
@@ -1,5 +1,5 @@
 * {
-    box-sizing: border-box
+    box-sizing: border-box;
 }
 
 body {
@@ -8,49 +8,8 @@ body {
     padding: 0
 }
 
-h2, h3 {
-    color: #00a2c6
-}
-
-footer {
-    padding: 20px;
-    color: #000;
-    background-color: #00a2c6;
-    text-align: center;
-    font-weight: 700
-}
-
-nav a {
-    font-size: 18px;
-    font-weight: 400;
-    text-decoration: none;
-    color: #000
-}
-
-nav a:hover {
-    font-weight: 700
-}
-
-.profile header {
-    text-align: center
-}
-
-.featured-image {
-    width: 100%;
-    max-height: 300px;
-    object-fit: cover;
-    object-position: center
-}
-
-.profile img {
-    width: 200px
-}
-
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .2);
-    border-radius: 5px;
-    padding: 20px;
-    margin-top: 20px
+header {
+    display: inline
 }
 
 .jumbotron {
@@ -74,14 +33,51 @@ nav {
     top: 0
 }
 
+nav a {
+    font-size: 18px;
+    font-weight: 400;
+    text-decoration: none;
+    color: #000
+}
+
+nav a:hover {
+    font-weight: 700
+}
+
 main {
     padding: 20px;
     overflow: auto
 }
 
+h2, h3 {
+    color: #00a2c6
+}
+
 #content {
     float: left;
     width: 75%
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .2);
+    border-radius: 5px;
+    padding: 20px;
+    margin-top: 20px
+}
+
+.featured-image {
+    width: 100%;
+    max-height: 300px;
+    object-fit: cover;
+    object-position: center
+}
+
+.profile header {
+    text-align: center
+}
+
+.profile img {
+    width: 200px
 }
 
 aside {
@@ -90,8 +86,12 @@ aside {
     padding-left: 20px
 }
 
-header {
-    display: inline
+footer {
+    padding: 20px;
+    color: #000;
+    background-color: #00a2c6;
+    text-align: center;
+    font-weight: 700
 }
 
 @media screen and (max-width:1000px) {
