--- a/dicoding/assets/styles/styles.css
+++ b/dicoding/assets/styles/styles.css
@@ -4,12 +4,59 @@
 
 body {
     font-family: 'Quicksand', sans-serif;
+
     margin: 0;
-    padding: 0
+    padding: 0;
 }
 
-header {
-    display: inline
+h2,
+h3 {
+    color: #00a2c6;
+}
+
+footer {
+    padding: 20px;
+    color: white;
+    background-color: #00a2c6;
+
+    text-align: center;
+    font-weight: bold;
+}
+
+nav a {
+    font-size: 18px;
+
+    font-weight: 400;
+    text-decoration: none;
+
+    color: white;
+}
+
+nav a:hover {
+    font-weight: bold;
+}
+
+.profile header {
+    text-align: center;
+}
+
+.featured-image {
+    width: 100%;
+    max-height: 300px;
+
+    object-fit: cover;
+    object-position: center;
+}
+
+.profile img {
+    max-width: 200px;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+
+    padding: 20px;
 }
 
 .jumbotron {
@@ -17,12 +64,13 @@ header {
     padding: 60px;
     background-color: #00c8eb;
     text-align: center;
-    color: #000
+    color: white;
 }
 
 nav ul {
     padding-inline: 4rem;
     display: flex;
+
     gap: 2rem;
 }
 
@@ -33,33 +81,21 @@ nav li {
 nav {
     background-color: #00a2c6;
     padding: 5px;
+
     position: sticky;
-    top: 0
-}
-
-nav a {
-    font-size: 18px;
-    font-weight: 400;
-    text-decoration: none;
-    color: #000
-}
-
-nav a:hover {
-    font-weight: 700
+    top: 0;
 }
 
 main {
     padding: 20px;
+
     display: flex;
     gap: 1.5rem;
 }
 
-h2, h3 {
-    color: #00a2c6
-}
-
 #content {
     flex: 5;
+
     display: flex;
     flex-flow: column nowrap;
     gap: 1rem 2rem;
@@ -69,42 +105,28 @@ aside {
     flex: 1;
 }
 
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .2);
-    border-radius: 5px;
-    padding: 20px;
-   
-}
-
-.featured-image {
-    width: 100%;
-    max-height: 300px;
-    object-fit: cover;
-    object-position: center
-}
-
-.profile header {
-    text-align: center
-}
-
-.profile img {
-    width: 200px
-}
-
-footer {
-    padding: 20px;
-    color: #000;
-    background-color: #00a2c6;
-    text-align: center;
-    font-weight: 700
+header {
+    display: inline;
 }
 
 /* Perangkat dengan lebar layar 1200px dan di bawahnya */
 @media screen and (max-width: 1200px) {
+    main {
+        flex-flow: column nowrap;
+    }
 
+    main aside {
+        align-self: center;
+    }
 }
 
 /* Perangkat dengan lebar layar 768px dan di bawahnya */
 @media screen and (max-width: 768px) {
+    nav ul {
+        justify-content: center;
+    }
 
+    main aside {
+        align-self: stretch;
+    }
 }
