--- a/dicoding/styles/app.css
+++ b/dicoding/styles/app.css
@@ -16,7 +16,7 @@ header.navbar-container {
     width: 100%;
     max-width: 1200px;
     padding-block: 1rem;
-    /* margin-inline: auto; */
+    margin-inline: auto;
     display: flex;
     justify-content: space-around;
     align-items: center;
