--- a/bmi-calculator-main/style.css
+++ b/bmi-calculator-main/style.css
@@ -126,3 +126,11 @@ h1 {
 .obesity {
   color: var(--obesity);
 }
+
+.container-apps {
+  text-align: center;
+}
+
+.container-apps img {
+  width: 300px;
+}
