--- a/submission/styles/style.css
+++ b/submission/styles/style.css
@@ -14,6 +14,9 @@ body {
     width: 1100px;
     margin: auto;
     position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .logo a {
